--- a/labs/03-create-first-component/src/app/app.component.html
+++ b/labs/03-create-first-component/src/app/app.component.html
@@ -1,4 +1,5 @@
 <h1>
   {{title}}
 </h1>
-<app-sidebar></app-sidebar>
+<app-sidebar [playgrounds]="playgrounds" (selectedPlayground)="updateSelectedPlayground($event)"></app-sidebar>
+<app-footer [value]="selected"></app-footer>
