--- a/labs/03-create-first-component/src/app/sidebar/sidebar.component.html
+++ b/labs/03-create-first-component/src/app/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <aside>
     <nav>
         <div class="list-group" *ngFor="let playground of playgrounds">
-            <a class="list-group-item">
+            <a class="list-group-item" [class.active]="TODO" (click)="selectPlayground(playground)">
                 <h4 class="list-group-item-heading">{{playground.name}}</h4>
                 <p class="list-group-item-text">{{playground.description}}</p>
             </a>
