Refactor footer to be numb.

--- a/labs/03-create-first-component/src/app/footer/footer.component.html
+++ b/labs/03-create-first-component/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
-<footer *ngIf="value !== undefined">
+<footer>
     <h3>
-        {{value.name}}
-        <p>{{value.addressDescription}}</p>
-        <p>{{value.description}}</p>
+        {{name}}
+        <p>{{field1}}</p>
+        <p>{{field2}}</p>
     </h3>
 </footer>
