Add google maps link in the footer

--- a/labs/03-create-first-component/src/app/footer/footer.component.html
+++ b/labs/03-create-first-component/src/app/footer/footer.component.html
@@ -3,5 +3,10 @@
         {{name}}
         <p>{{field1}}</p>
         <p>{{field2}}</p>
+        <h3>
+            Check out the place:
+            <a [href]="getMapsLink()" target="_blank"><img src="../assets/maps_logo.png"
+                alt="gmaps"></a>
+        </h3>
     </h3>
 </footer>
