Add marker to map.

--- a/labs/03-create-first-component/src/app/footer/footer.component.html
+++ b/labs/03-create-first-component/src/app/footer/footer.component.html
@@ -4,7 +4,7 @@
         <p>{{field1}}</p>
         <p>{{field2}}</p>
         <h3>
-            Check out the place:
+            Check out on Google Maps:
             <a [href]="getMapsLink()" target="_blank"><img src="../assets/maps_logo.png"
                 alt="gmaps"></a>
         </h3>
