--- a/labs/03-create-first-component/src/app/app.component.html
+++ b/labs/03-create-first-component/src/app/app.component.html
@@ -1,5 +1,1 @@
-<!-- <h1>{{title}}</h1> -->
-<leaflet [center]="center" [markers]="markersObservable"></leaflet>
-<app-sidebar [playgrounds]="playgrounds" (selectedPlayground)="updateSelectedPlayground($event)"></app-sidebar>
-<app-footer *ngIf="selected != undefined" [name]="selected.name" [field1]="selected.addressDescription"
-  [field2]="selected.description" [position]="selected.position"></app-footer>
+<router-outlet></router-outlet>
