--- a/labs/03-create-first-component/src/app/map/map.component.html
+++ b/labs/03-create-first-component/src/app/map/map.component.html
@@ -1,4 +1,4 @@
 <leaflet [center]="center" [markers]="markersObservable"></leaflet>
-<app-sidebar [playgrounds]="playgrounds" (selectedPlayground)="updateSelectedPlayground($event)"></app-sidebar>
-<app-footer *ngIf="selected != undefined" [name]="selected.name" [field1]="selected.addressDescription"
-  [field2]="selected.description" [position]="selected.position"></app-footer>
+<app-sidebar [playgrounds]="playgrounds" [selectedPlayground]="selectedPlayground" (onPlaygroundSelected)="updateSelectedPlayground($event)"></app-sidebar>
+<app-footer *ngIf="selectedPlayground != undefined" [name]="selectedPlayground.name" [field1]="selectedPlayground.addressDescription"
+  [field2]="selectedPlayground.description" [position]="selectedPlayground.position"></app-footer>
